--- a/views/payment-method.hbs
+++ b/views/payment-method.hbs
@@ -38,12 +38,21 @@
                 </div>
             </div>
 
-
-            <div class="box mt-4 mb-5">
-                    <div class="custom-control custom-switch">
-                        <input type="checkbox" class="custom-control-input" id="save-card" name="saveCard">
-                        <label class="custom-control-label" for="save-card"></label>
+            <div class="form-row save-card-check">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="custom-control custom-switch">
+                            <input type="checkbox" class="custom-control-input" id="save-card" name="saveCard">
+                            <label class="custom-control-label" for="save-card"></label>
+                        </div>
                     </div>
+                    <div class="col-9">
+                        <p>Si quieres, guardamos tus datos de pago para futuras ocasiones.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="box mt-4 mb-5 payment-information">
                     <p>Tu pago se realizará una vez que haya un aceptación mutua entre el cuidador y tú durante el perido de prueba</p>
             </div>
 
