--- a/views/service-validation.hbs
+++ b/views/service-validation.hbs
@@ -43,13 +43,20 @@
 
         document.getElementById('carer-name').innerHTML = contract.carerName;
 
-        apiService
-            .sendContractPetition(contract)
-            .then( async (res) => {
-               // console.log('res:', res);
-                
-            })
-            .catch((err) => console.log(err))
+
+        setTimeout(() => {
+
+            window.location.assign("/service-map")
+
+        }, 4000)
+
+        /* apiService
+             .sendContractPetition(contract)
+             .then( async (res) => {
+                // console.log('res:', res);
+                 
+             })
+             .catch((err) => console.log(err))*/
 
     };
 </script>
