--- a/views/payment-method.hbs
+++ b/views/payment-method.hbs
@@ -27,7 +27,7 @@
                 <div class="col-6">
                     <div class="form-group compact hideAutocomplete">
                         <label for="expiresMonth">¿Cúando caduca?</label>
-                        <input class="form-control" type="text" pattern="\d*" name="expiresMonth" id="expiresMonth">
+                        <input class="form-control" type="text" maxlength="4" pattern="\d*" name="expiresMonth" id="expiresMonth">
                     </div>
                 </div>
                 <div class="col-6">
