--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -81,8 +81,8 @@ p {
 
 @font-face {
   font-family: 'icomoon';
-  src: url("../../fonts/icomoon.eot?j8u0jq");
-  src: url("../../fonts/icomoon.eot?j8u0jq#iefix") format("embedded-opentype"), url("../../fonts/icomoon.woff2?j8u0jq") format("woff2"), url("../../fonts/icomoon.ttf?j8u0jq") format("truetype"), url("../../fonts/icomoon.woff?j8u0jq") format("woff"), url("../../fonts/icomoon.svg?j8u0jq#icomoon") format("svg");
+  src: url("../../fonts/icomoon.eot?ru1wed");
+  src: url("../../fonts/icomoon.eot?ru1wed#iefix") format("embedded-opentype"), url("../../fonts/icomoon.woff2?ru1wed") format("woff2"), url("../../fonts/icomoon.ttf?ru1wed") format("truetype"), url("../../fonts/icomoon.woff?ru1wed") format("woff"), url("../../fonts/icomoon.svg?ru1wed#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block; }
@@ -99,6 +99,13 @@ p {
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
+
+.icon-user:before {
+  content: "\e90a";
+  color: #f97350; }
+
+.icon-flag:before {
+  content: "\e909"; }
 
 .icon-check:before {
   content: "\e908"; }
@@ -1155,6 +1162,75 @@ main {
       background-position: center;
       width: 65px;
       height: 65px; }
+    .v-service-map .box-main.mapServiceInfo {
+      height: 120px;
+      background-color: #FAD06C;
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between; }
+      .v-service-map .box-main.mapServiceInfo .mapServiceInfo_text {
+        font-size: 1.2rem;
+        color: #000;
+        position: relative;
+        top: -10px;
+        padding-left: 29px; }
+        .v-service-map .box-main.mapServiceInfo .mapServiceInfo_text:before {
+          content: "\e909";
+          position: absolute;
+          top: 0;
+          left: 0;
+          font-family: 'icomoon';
+          font-size: 1.4rem; }
+      .v-service-map .box-main.mapServiceInfo .avatar {
+        width: 50px;
+        height: 50px; }
+      .v-service-map .box-main.mapServiceInfo .mapServiceInfo_avatars {
+        width: 205px;
+        display: flex;
+        justify-content: flex-end;
+        transform: translateX(14px); }
+        .v-service-map .box-main.mapServiceInfo .mapServiceInfo_avatars > .locator {
+          margin: 0 9px;
+          display: inline-block;
+          margin-top: -53px;
+          margin-bottom: 2px; }
+          .v-service-map .box-main.mapServiceInfo .mapServiceInfo_avatars > .locator p {
+            font-size: 1.4rem;
+            text-align: center; }
+          .v-service-map .box-main.mapServiceInfo .mapServiceInfo_avatars > .locator .avatar {
+            margin-bottom: 8px;
+            position: relative; }
+            .v-service-map .box-main.mapServiceInfo .mapServiceInfo_avatars > .locator .avatar.user:before {
+              content: "\e90a";
+              color: #f97350;
+              font-size: 20px;
+              font-family: 'icomoon';
+              position: absolute;
+              top: 50%;
+              translate: transform(-50%, -50%); }
+          .v-service-map .box-main.mapServiceInfo .mapServiceInfo_avatars > .locator .avatar.user {
+            background-image: url("../../images/user.svg");
+            background-size: 50%; }
+            .v-service-map .box-main.mapServiceInfo .mapServiceInfo_avatars > .locator .avatar.user:before {
+              content: "\e90a";
+              color: #f97350;
+              font-size: 20px;
+              font-family: 'icomoon';
+              position: absolute;
+              top: 50%;
+              translate: transform(-50%, -50%);
+              background-image: url("../../images/user.svg"); }
+    .v-service-map .box-main.mapServiceTimmer {
+      height: 56px; }
+      .v-service-map .box-main.mapServiceTimmer .timmer {
+        font-size: 24px;
+        margin: 0 auto;
+        display: block;
+        text-align: center;
+        top: -13px;
+        position: relative; }
+        .v-service-map .box-main.mapServiceTimmer .timmer span {
+          padding: 0 2px; }
 
 .btn {
   width: 100%;
